# mari-cc

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLUGIN-SPEC.md  PRODUCT.md  README.md  SECURITY.md  SPEC.md  STYLE.md  connect-confluence-skill.md  connect-gdocs-skill.md  connect-github-skill.md  connect-hubspot-skill.md  connect-microsoft-skill.md  deny.toml  install.sh  mari-skill.md  mkdocs.yml  reference-asset-adr.md  reference-factcheck.md  reference-init.md  reference-lineage.md  reference-live.md  reference-narrative.md  reference-tag.md  reference-understate.md  template-code-of-conduct.md  template-contributing.md  template-runbook.md  template-security.md
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
.mari/: config.json
commands/: audit.md  clarify.md  critique.md  deslop.md  draft.md  factcheck.md  polish.md  search.md  sharpen.md  sync.md  tag.md  tighten.md  understate.md
console/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
console/docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
console/docs-site/docs/: intro.md
console/docs-site/docs/explanation/: _category_.json  architecture.md
console/docs-site/docs/panels/: _category_.json  curation.md  docs.md  knowledge.md  maintenance.md  team.md
console/docs-site/docs/reference/: api.md
console/src/saas/: App.tsx  main.tsx
console/src/saas/components/: CommandPalette.tsx  Console.tsx  Placeholder.tsx  ProjectSwitcher.tsx  RenderCrashBoundary.tsx  console-ui.tsx  feedback.tsx
console/src/saas/components/groups/: CloudGroup.tsx  ConfigGroup.tsx  DetectGroup.tsx  DetectorLists.tsx  DocsiteGroup.tsx  DocumentsGroup.tsx  FactsGroup.tsx  GlossaryGroup.tsx  LineageGroup.tsx  LocalizationGroup.tsx  NudgesGroup.tsx  OverviewGroup.tsx  RulesGroup.tsx  SearchGroup.tsx  SourcesGroup.tsx  StatusGroup.tsx  TagsGroup.tsx  TemplatesGroup.tsx
console/src/saas/components/ui/: Badge.tsx  DataTable.tsx  Drawer.tsx  Field.tsx  Page.tsx  Table.tsx  buttons.ts  card.ts  focusRing.ts  index.ts
console/src/saas/lib/: client.ts  config.ts  pipeline.ts
console/src/saas/pages/: ConsolePage.tsx  NotFound.tsx
console/src/shared/: index.css
console/src/shared/components/: Logo.tsx
docs/: 00-current-state.md  01-known-issues.md  02-production-blockers.md  03-ml-tier1.md  04-scale-and-robustness.md  05-distribution.md  06-connectors.md  07-security.md  08-portability.md  09-testing-ci.md  10-community-and-user-docs.md  11-deferred-and-nice-to-have.md  README.md  STATUS.md
fixtures/: sloppy.md
hooks/: bootstrap.sh  hooks.json
scripts/: bundle-dylibs.sh
skills/connect-confluence/: SKILL.md
skills/connect-discord/: SKILL.md
skills/connect-granola/: SKILL.md
skills/connect-jira/: SKILL.md
skills/connect-linear/: SKILL.md
skills/connect-mailinglist/: SKILL.md
skills/connect-salesforce/: SKILL.md
skills/connect-slack/: SKILL.md
skills/connect-zendesk/: SKILL.md
skills/mari/: SKILL.md
skills/mari/references/: reference-asset-code-of-conduct.md  reference-audit.md  reference-cadence.md  reference-community.md  reference-deslop.md  reference-docsite.md  reference-document.md  reference-extract.md  reference-format.md  reference-humanize.md  reference-init.md  reference-narrative.md  reference-platform.md  reference-polish.md  reference-scan.md  reference-tag-analyze.md  reference-tag.md  template-adr.md  template-governance.md  template-postmortem.md  template-readme.md  template-rfc.md
src/: assets.rs  attn.rs  authcmd.rs  checkcmd.rs  cloud.rs  config.rs  configcmd.rs  curation.rs  docsite.rs  factcheck.rs  features.rs  hook.rs  i18n.rs  initcmd.rs  lineage.rs  main.rs  models.rs  narrative.rs  ocr.rs  office.rs  platform.rs  rulescmd.rs  statuscmd.rs  surface.rs  workspace.rs
src/connectors/: cloud.rs  gitlog.rs  mod.rs
src/connectors/cloud/: confluence.rs  discord.rs  gdocs.rs  github.rs  granola.rs  hubspot.rs  jira.rs  linear.rs  microsoft.rs  salesforce.rs  slack.rs  zendesk.rs
src/console/: api.rs  mod.rs
src/detector/: ctx.rs  grammar.rs  helpers.rs  lists.rs  mod.rs  pack_ap.rs  pack_chicago.rs  pack_google.rs  pack_microsoft.rs  pack_plain.rs  readability.rs  render.rs  rules_a.rs  rules_b.rs  rules_c.rs  rules_d.rs  runner.rs  score.rs  strings.rs
src/index/: iceberg.rs  icepub.rs  icestore.rs  icewrite.rs  mod.rs  search.rs  sync.rs  vector.rs
tests/: e2e.rs
website/: index.md
website/explanation/: architecture.md  curation-model.md  design-decisions.md
website/getting-started/: install.md  quickstart.md
website/guides/: connect-sources.md  curate-knowledge.md  factcheck.md  generate-docs.md  improve-prose.md  keep-docs-fresh.md  search-knowledge.md  share-with-team.md
website/reference/: cli.md  configuration.md  connectors.md  detector-rules.md  models.md  slash-commands.md
