[package]
name = "mari"
version = "0.1.0"
edition = "2021"
description = "Local-first knowledge curation and prose-quality CLI for Claude Code"
license = "MIT"

[[bin]]
name = "mari"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
fancy-regex = "0.14"
globset = "0.4"
ignore = "0.4"
duckdb = { version = "1", features = ["bundled", "vtab-arrow"] }
pulldown-cmark = "0.12"
aho-corasick = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sha2 = "0.10"
rayon = "1"
owo-colors = "4"
is-terminal = "0.4"
ureq = { version = "2", features = ["json", "tls"] }
url = "2"
percent-encoding = "2"
pdf-extract = "0.12.0"
llama-cpp-2 = "0.1.151"
lance = "8.0.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
arrow-array = "58"
arrow-schema = "58"
futures = "0.3.32"
llama-cpp-sys-2 = "0.1.151"
harper-core = "=2.0.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
