[package]
name = "mari"
version = "0.1.1"
edition = "2021"
description = "Local-first knowledge curation and prose-quality CLI for Claude Code"
license = "MIT"

[[bin]]
name = "mari"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
fancy-regex = "0.14"
globset = "0.4"
ignore = "0.4"
# `bundled`: statically compile the DuckDB amalgamation into the binary so the
# release is a single self-contained executable (no shipped .dylib, and it builds
# from a clean checkout — no vendored lib required). Costs build time.
duckdb = { version = "1", features = ["bundled", "vtab-arrow"] }
pulldown-cmark = "0.12"
aho-corasick = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sha2 = "0.10"
rayon = "1"
owo-colors = "4"
is-terminal = "0.4"
ureq = { version = "2", features = ["json", "tls"] }
url = "2"
percent-encoding = "2"
pdf-extract = "0.12.0"
# Default (static): llama.cpp + ggml are baked into the binary as static archives.
llama-cpp-2 = "0.1.151"
lance = "8.0.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
arrow-array = "58"
arrow-schema = "58"
arrow-select = "58"
# Manual Iceberg writer (§8.8): Parquet data/delete files written directly from
# Arrow batches with Iceberg field-ids stamped into the schema. DuckDB is never
# in the write path. `apache-avro` writes the Iceberg manifest + manifest-list
# files; table metadata.json + version-hint.text are plain serde_json/text.
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd"] }
apache-avro = "0.17"
# Object-store writer for the s3 warehouse (§9). Local fs and s3 go through one
# trait; DuckDB stays read-only. `aws` pulls the S3 backend + credential chain.
object_store = { version = "0.13", features = ["aws"] }
# Iceberg bucket() partition transform hashes with 32-bit x86 murmur3, seed 0.
murmur3 = "0.5"
futures = "0.3.32"
llama-cpp-sys-2 = "0.1.151"
harper-core = "=2.0.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.41.0"
# Local console (§console): a synchronous, thread-per-connection HTTP server for
# the `mari console` command. `tiny_http` keeps the blocking DuckDB/Iceberg read
# +write model (no async runtime needed); `include_dir` bakes the built web
# console (console/dist) into the binary so the console ships self-contained.
tiny_http = "0.12"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Thin LTO gives ~full-fat runtime perf at a fraction of the link time.
# Full `lto = true` re-optimizes the entire graph (llama.cpp + duckdb + lance)
# on every release build, which dominated build time.
lto = "thin"
