[package]
name = "mari"
version = "0.4.0"
edition = "2021"
description = "Deterministic prose-quality CLI for Claude Code"
license = "MIT"

[[bin]]
name = "mari"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
fancy-regex = "0.14"
globset = "0.4"
ignore = "0.4"
pulldown-cmark = "0.12"
aho-corasick = "1"
rayon = "1"
owo-colors = "4"
is-terminal = "0.4"
percent-encoding = "2"
harper-core = "=2.0.0"
# The console uses a small synchronous HTTP server; include_dir bundles its UI.
tiny_http = "0.12"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
# Thin LTO gives ~full-fat runtime perf at a fraction of the link time.
# Full `lto = true` re-optimizes the entire dependency graph on every release
# build, which dominates build time.
lto = "thin"
